--- a/procfile
+++ b/procfile
@@ -1,4 +1,1 @@
-web: gunicorn app:messenger
-heroku buildpacks:clear
-heroku buildpacks:add --index heroku/python
-heroku ps:scale web=1
+web: gunicorn messenger:app
